添加 Git停止跟踪特定文件的更改

--- a/Git/11_.gitignore.md
+++ b/Git/11_.gitignore.md
@@ -2,6 +2,14 @@
 
 总会有一些不需要跟踪的文件，可以创建一个名为 `.gitignore` 的文件，列出要忽略的文件的模式。
 
+## 停止跟踪特定文件的更改
+
+如果远程仓库中的文件发生修改，在 `git pull` 时，仍会覆盖该文件。
+
+```bash
+git update-index --assume-unchanged my.json
+```
+
 ## 格式
 
 - 所有空行或者以 `#` 开头的行都会被 Git 忽略。
