调整 Life 相关文件

--- a/Life/租房指南.md
+++ b/Life/租房指南.md
@@ -7,14 +7,14 @@
 尽量租民房，物业水费电费便宜。
 公寓是商用水电，会贵很多。
 
-小区里窗上贴的出租。
-贝壳（中介）、安居客、58同城
+优先选择小区里窗上贴的出租。
+其次贝壳（中介）、安居客、~~58同城~~
 
 千万不要租二房东的。
 必须找房东本人签合同，看房产证身份证确认。
 
 中介的话，看营业执照门头。
-中介费是租客房东各付一个月的一半。
+中介费通常是一个月的房租，租客房东各付一半。
 
 签订合同时，要仔细阅读合同条款，及时发现里面的条文陷阱。
 合同中应明确约定双方的违约责任和违约赔偿金额，以及如何解除合同等相关规定。
@@ -24,7 +24,10 @@
 
 入住前拍摄房间的照片/视频 ,记录房子原始状态，并立即发送给房东与他们确认，避免后续发现物品损坏说不清楚，及可能的赔偿情况。
 
-采光尽量好一点，避免潮湿
+采光尽量好一点，避免潮湿。
+
+检查水流大小，卫浴设施。
+（在厦门时租的房子，晚上6点以后水压很小，甚至无法洗澡。）
 
 ## 参考信息
 
